tests/negative/runtime/int_overflow_add/input.ci
void main() {
    int x = 9223372036854775807;  // INT64_MAX
    int y = x + 1;
    print(toString(y) + "\n");
}
